--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=08f7e8d0eaf9dcad283b",
+    "/css/app.css": "/css/app.css?id=e83227e995b596047507"
 }
